--- a/index.html
+++ b/index.html
@@ -71,30 +71,31 @@
 
     </section>
     <section class="*">
-      <div class="donate">
-        <h1>Their lives depend on 
-            your donation</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, tenetur reprehenderit ex magnam, perferendis esse quae laboriosam sapiente quas quam cupiditate numquam, molestias debitis dicta? Ad error necessitatibus nesciunt maxime.</p>
-            <a  class="link-btn" target="_blank" href="https://www.facebook.com/profile.php?id=100081272015593">How to Contribute?</a>
-            <img src="images/donation13.jpg" alt="">
-      </div>
-      <div>
-        <h1>They need us 
-            to suvive</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis ut amet distinctio maiores provident cupiditate esse nobis eligendi! Ad, nisi?</p>
-            <a class="link-btn"  target="_blank" href="https://www.facebook.com/profile.php?id=100081272015593">How to Contribute</a>
-            <img src="images/donation2.jpg" alt="">
-
-      </div>
-    </section>
-    <section>
+        <div class="donate">
+          <h1>Their lives depend on 
+              your donation</h1>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, tenetur reprehenderit ex magnam, perferendis esse quae laboriosam sapiente quas quam cupiditate numquam, molestias debitis dicta? Ad error necessitatibus nesciunt maxime.</p>
+              <a  class="link-btn" target="_blank" href="https://www.facebook.com/profile.php?id=100081272015593">How to Contribute?</a>
+              <img src="images/donation13.jpg" alt="">
+        </div>
+        <div>
+          <h1>They need us 
+              to suvive</h1>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis ut amet distinctio maiores provident cupiditate esse nobis eligendi! Ad, nisi?</p>
+              <a class="link-btn"  target="_blank" href="https://www.facebook.com/profile.php?id=100081272015593">How to Contribute</a>
+              <img src="images/donation2.jpg" alt="">
+  
+        </div>
+      </section>
+    <section class="updates">
         <div>
             <h1>Get my updates</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam excepturi minima sequi placeat ducimus minus maxime tempora laudantium maiores molestiae.</p>
-            <input type="email" name="" id="">
+            <input type="email" name=" email" id="submit" placeholder="Email">
+            <input type="button" value="submit">
         </div>
     </section>
-    <section>
+    <section class="footer">
         <h1>Be humble</h1>
         <h4>I'm gonna do it</h4>
     </section>
