--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
     <section class="footer">
         <h1>Be humble</h1>
-        <h4>I'm gonna do it</h4>
+        <h4>I'm felling so much better</h4>
     </section>
     
 </body>
